# WindowsAutomation

./: .gitignore  .replit  README.md  RELEASE.md  app.py  bot_service.py  build.bat  config.json  contacts.json  installer.iss  requirements.txt
.github/: RELEASING.md
.github/workflows/: build.yml  swift.yml
Mac-MCP/: .env.example  .gitignore  IMPLEMENTATION.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  README.md  SETUP.md  STATUS.md  app.py  bot_service.py  build_app.sh  implementationmacosapp.md
Mac-MCP/ControlPanel/: Package.swift  make_app.sh  make_dmg.sh
Mac-MCP/ControlPanel/Sources/Lotus/: AppDelegate.swift  (+3 more)
Mac-MCP/ControlPanel/Sources/Lotus/Resources/: bot_service.py  pyproject.toml
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/: __main__.py  analytics.py  control_api.py  paths.py  permissions.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/ax/: controls.py  core.py  events.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/desktop/: screenshot.py  views.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/filesystem/: views.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/launcher/: app_launcher.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/spaces/: __init__.py  core.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/tools/: __init__.py  clipboard.py  defaults.py  multi.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/tree/: config.py
Mac-MCP/ControlPanel/Sources/Lotus/Resources/src/mac_mcp/watchdog/: service.py
Mac-MCP/install_scripts/: com.lotus.botservice.plist  install.sh  uninstall.sh
Mac-MCP/src/mac_mcp/: config.py  telegram_bot.py
Mac-MCP/tests/: conftest.py  test_analytics.py  test_desktop_utils.py  test_desktop_views.py  test_filesystem_service.py  test_filesystem_views.py  test_paths.py  test_permissions.py  test_shell_executor.py  test_spaces.py
Windows-MCP/: .env.example  .gitignore  CLAUDE.md  INSTALLER_README.md  LICENSE.md  README.md  RELEASE_NOTES.md  ROOT_README.md  app.py  bot_service.py  build.bat  installer.iss  installer_tasks.txt  lotus_tray.py  manifest.json  pyproject.toml  requirements.txt  server.json  version.json
Windows-MCP/.github/workflows/: build.yml  release.yml
Windows-MCP/install_scripts/: detect_ollama.ps1  download_model.ps1  download_tools.ps1  install_ffmpeg.ps1  install_ollama.ps1  install_python.ps1  install_requirements.ps1  post_install.ps1  pull_model.ps1  security.ps1  system_check.ps1
Windows-MCP/scripts/: benchmark_multi_coordinates.py  build_installer.ps1  generate_changelog.py  version_bump.py
Windows-MCP/src/reports/: Research_stock_market_basics_2026-04-29.txt
Windows-MCP/src/windows_mcp/: __main__.py  analytics.py  assets.py  diagnostics.py  paths.py  telegram_bot.py  updater.py
Windows-MCP/src/windows_mcp/contacts/: contact_manager.py
Windows-MCP/src/windows_mcp/desktop/: powershell.py  service.py  utils.py
Windows-MCP/src/windows_mcp/filesystem/: __init__.py  service.py  storage_manager.py
Windows-MCP/src/windows_mcp/launcher/: __init__.py  app_launcher.py  app_registry.py  detection.py  fallback.py  launcher_cache.json
Windows-MCP/src/windows_mcp/media/: download_tui.py  downloader.py  music_player.py  player_tui.py  playlist_manager.py  screen_recorder.py  voice_system.py
Windows-MCP/src/windows_mcp/research/: research_engine.py
Windows-MCP/src/windows_mcp/tools/: README_FM.md  _snapshot_helpers.py  activity_logger.py  browser.py  fm.py  research.py
Windows-MCP/src/windows_mcp/tree/: config.py  service.py  views.py
Windows-MCP/src/windows_mcp/uia/: controls.py  core.py  whatsapp.py
Windows-MCP/tests/: test_multi_tools.py
attached_assets/: Pasted--LOTUS-V4-COMPLETE-WINDOWS-AI-ASSISTANT-REBUILD-Act-as-_1778779125589.txt  Pasted-Build-a-FULLY-AUTOMATED-GitHub-deployment-and-release-p_1778781461000.txt  Pasted-Build-a-complete-professional-Windows-installer-system-_1778780680380.txt
data/: apps_cache.json  stats.json  users.json
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
install_scripts/: download_model.ps1  download_tools.ps1  install_ollama.ps1
logs/: activity_log.txt
release-notes/: README.md  TEMPLATE.md  v1.0.0.md  v1.1.0.md  v2.0.0.md  v2.0.1.md
scratch/: check_voices.py  list_voices.py  test_zira.py
scripts/: cleanup_git.sh
(+33 files in other folders)
